# skoltech-Infrastructure

./: .gitignore  LICENSE  Makefile  README.md  data_analitics.ipynb  model_foot_print.ipynb  pyproject.toml  requirements.txt
models_ext/: calculate_metrics.py  foot_print_model.py
notebooks/: EDA.ipynb  clear_houses.ipynb  data_analitics.ipynb  ensemble_test.ipynb  model_foot_print.ipynb  predict_test.ipynb  split_merge_test.ipynb  torchgeo_baseline.ipynb
src/modelling/: base.py  ensemble.py  metrics.py  predict.py  train.py
src/modelling/production/: FPNMOCO.py  __init__.py  deeplabMOCO.py  footPrint.py  unetMOCO.py  unetPlusPlusMOCO.py  unetRaw.py
src/preprocessing/: reader.py  tile_generating.py
src/utils/: __init__.py  base.py
yolov_preproc/: contours.py
