[tool.poetry]
name = "skoltech-infrastructure"
version = "0.1.0"
description = ""
authors = ["Профилактика"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pillow = "^10.1.0"
imageio = "^2.33.0"
opencv-python = "^4.8.1.78"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = {extras = ["d"], version = "^23.11.0"}
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
